--- a/Intrudução ao Bootstrap/Index.html
+++ b/Intrudução ao Bootstrap/Index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FNews</title>
-    <link rel="shortcut icon" type ="imagem/x-icon" href="Intrudução ao Bootstrap/IMG/logoF.ico"/>
+    <link rel="shortcut icon" type ="imagem/x-icon" href="IMG/logoF.ico"/>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/">
 
     <!-- Bootstrap core CSS -->
@@ -84,7 +84,7 @@
     <!-- Barra de Navegação  -->
     <nav id="barra_nav" class="navbar navbar-expand-md navbar-dark fixed-top ">
       <div  class="container-fluid">
-        <img class="me-4" id="logo" src="Intrudução ao Bootstrap/IMG/logo.png"  href="#">
+        <img class="me-4" id="logo" src="IMG/logo.png"  href="#">
         <a class="navbar-brand" href="#">FNews 2022</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
